# Data-Clean-Env

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  __init__.py  baseline_scores.json  blog.md  client.py  colab_llama_grpo.ipynb  colab_qwen.ipynb  colab_training_llama.ipynb  finale_roadmap.html  inference.py  models.py  openenv.yaml  pyproject.toml  pytest.ini  requirements.txt  server.py  tasks.ps1  training_script.py  update_nbs.py
.github/workflows/: ci.yml
baseline/: agent.py  llama_agent.py
dataclean/: __init__.py  env.py  models.py  tasks.py  ui.py  utils.py
server/: app.py
tests/: conftest.py  test_api.py  test_env.py  test_models.py  test_tasks.py
